[gd_scene load_steps=10 format=2]

[ext_resource path="res://font.tres" type="DynamicFont" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://img/lordroberson.png" type="Texture" id=3]
[ext_resource path="res://img/meicholtz.png" type="Texture" id=4]
[ext_resource path="res://img/bg.jpg" type="Texture" id=5]
[ext_resource path="res://menus/Briefing.gd" type="Script" id=6]
[ext_resource path="res://img/palaceking.png" type="Texture" id=7]

[sub_resource type="Shader" id=2]
code = "/*
	CRT shader for Godot Engine by Yui Kinomoto @arlez80
*/
shader_type canvas_item;

const float PI = 3.1415926535;

// ブラウン管のガラスの曲がり具合（フラットなやつは0.0でいいかな）
uniform float crt_curve : hint_range( 0.0, 1.0 ) = 0.02;
// 走査線の濃さ
uniform float crt_scan_line_color : hint_range( 0.0, 1.0 ) = 0.347;
// 光量
uniform float aperture_grille_rate : hint_range( 0.0, 1.0 ) = 0.4;
// RFスイッチ的ブラー
uniform float rf_switch_esque_blur : hint_range( 0.0, 1.0 ) = 1.0;
// 白色ノイズ
uniform float white_noise_rate : hint_range( 0.0, 1.0 ) = 0.0;

float random( vec2 pos )
{ 
	return fract(sin(dot(pos, vec2(12.9898,78.233))) * 43758.5453);
}

void fragment( )
{
	// ガラスの曲がり具合
	vec2 crt_curve_shift = ( vec2( 1.0, 1.0 ) - sin( UV.yx * PI ) ) * crt_curve;
	vec2 crt_curve_scale = vec2( 1.0, 1.0 ) + crt_curve_shift * 2.0;
	vec2 texture_fixed_uv = UV * crt_curve_scale - crt_curve_shift;
	vec2 fixed_uv = SCREEN_UV * crt_curve_scale - crt_curve_shift;
	// 範囲外を消す
	float enable_color = float( 0.0 <= texture_fixed_uv.x && texture_fixed_uv.x <= 1.0 && 0.0 <= texture_fixed_uv.y && texture_fixed_uv.y <= 1.0 );

	// ガラスの曲がり具合から元色を取得 + RFスイッチ的ブラー
	COLOR.rgb = (
		(
			texture( SCREEN_TEXTURE, fixed_uv ).rgb
		*	( 1.0 - rf_switch_esque_blur * 0.5 )
		)
	+	(
			(
				texture( SCREEN_TEXTURE, fixed_uv + vec2( -SCREEN_PIXEL_SIZE.x * 3.1, 0.0 ) ).rgb
			+	texture( SCREEN_TEXTURE, fixed_uv + vec2( SCREEN_PIXEL_SIZE.x * 3.1, 0.0 ) ).rgb
			)
			*	( rf_switch_esque_blur * 0.25 )	// （RFノイズ）0.5 * （テクスチャから読んだ2箇所を半分にしたい）0.5
		)
	) * enable_color;
	COLOR.a = 1.0;

	// ------------------------------------------------
	// 以下はアパーチャグリル上の1ピクセルごとの処理
	vec2 aperture_grille_pixel = vec2( floor( ( fixed_uv.x / SCREEN_PIXEL_SIZE.x ) / 3.0 ) * 3.0, fixed_uv.y );

	// 白色ノイズ
	float white_noise = random( aperture_grille_pixel + vec2( sin( TIME * 0.543254 ), cos( TIME * 0.254323563 ) ) );
	COLOR.rgb = mix(
		COLOR.rgb
	,	vec3( white_noise, white_noise, white_noise )
	,	white_noise_rate * enable_color
	);

	// アパーチャグリル再現
	float aperture_grille_point = mod( ( ( SCREEN_UV.x * crt_curve_scale.x ) - crt_curve_shift.x ) / SCREEN_PIXEL_SIZE.x, 3.0 );
	float aperture_grille_r_rate = clamp( 1.0 - aperture_grille_point, 0.0, 1.0 ) + clamp( aperture_grille_point - 2.0, 0.0, 1.0 );
	float aperture_grille_g_rate = clamp( 1.0 - abs( 1.0 - aperture_grille_point ), 0.0, 1.0 );
	float aperture_grille_b_rate = 1.0 - aperture_grille_r_rate - aperture_grille_g_rate;
	COLOR = clamp(
		COLOR * vec4(
			normalize( vec3(
				clamp( aperture_grille_r_rate, aperture_grille_rate, 1.0 )
			,	clamp( aperture_grille_g_rate, aperture_grille_rate, 1.0 )
			,	clamp( aperture_grille_b_rate, aperture_grille_rate, 1.0 )
			) )
		,	1.0
		)
	,	vec4( 0.0, 0.0, 0.0, 0.0 )
	,	vec4( 1.0, 1.0, 1.0, 1.0 )
	);

	// 走査線
	COLOR = mix(
		COLOR
	,	vec4( 0.0, 0.0, 0.0, 1.0 )
	,	float( 0 == int( fixed_uv.y / SCREEN_PIXEL_SIZE.y ) % 2 ) * crt_scan_line_color
	);
}
"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 2 )
shader_param/crt_curve = 0.02
shader_param/crt_scan_line_color = 0.0
shader_param/aperture_grille_rate = 0.162
shader_param/rf_switch_esque_blur = 0.416
shader_param/white_noise_rate = 0.0

[node name="Briefing" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -308.0
margin_top = -168.0
margin_right = 308.0
custom_constants/separation = 15
alignment = 1

[node name="Info" type="Label" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 616.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "Welcome, Boberto Lounge. The Coding Cabal has a new assignment for you."
align = 1
valign = 1
autowrap = true

[node name="Begin" type="Button" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 616.0
margin_bottom = 93.0
theme = ExtResource( 2 )
text = "BEGIN MISSION"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 616.0
margin_bottom = 138.0
theme = ExtResource( 2 )
text = "QUIT MISSION"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 22.0
margin_top = 72.0
margin_right = 638.0
margin_bottom = 172.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 48.0
margin_top = 41.0
margin_right = 179.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "LORD ROBERSON >"

[node name="Boss1" type="TextureRect" parent="HBoxContainer"]
margin_left = 194.0
margin_right = 294.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 3 )
expand = true

[node name="Boss2" type="TextureRect" parent="HBoxContainer"]
margin_left = 309.0
margin_right = 409.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 4 )
expand = true

[node name="Boss3" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_left = 376.0
margin_right = 476.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 7 )
expand = true

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_left = 424.0
margin_top = 41.0
margin_right = 568.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "< CURRENT TARGET"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 15 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[connection signal="pressed" from="VBoxContainer/Begin" to="." method="_on_Begin_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
